--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -6,6 +6,7 @@ ENV CHOKIDAR_USEPOLLING=true
 ENV LANG=C.UTF-8
 ENV TZ=Asia/Tokyo
 
-RUN npm run build
+# RUN npm run build
+# # RUN npm  install
 
-RUN ["npm", "start"]
+# RUN ["npm", "run" , "start"]
