--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -6,7 +6,6 @@ ENV CHOKIDAR_USEPOLLING=true
 ENV LANG=C.UTF-8
 ENV TZ=Asia/Tokyo
 
-# RUN npm run build
-# # RUN npm  install
+RUN npm run build
 
-# RUN ["npm", "run" , "start"]
+RUN ["npm", "run" , "start"]
