--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,6 +1,10 @@
 FROM node:18.16.0-slim
 
-WORKDIR /usr/app
+# WORKDIR /usr/app
+
+FROM base AS test-and-build
+COPY . /workspace
+WORKDIR /workspace
 
 ENV CHOKIDAR_USEPOLLING=true
 ENV LANG=C.UTF-8
