--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,10 +1,6 @@
 FROM node:18.16.0-slim
 
-# WORKDIR /usr/app
-
-FROM base AS test-and-build
-COPY . /workspace
-WORKDIR /workspace
+WORKDIR /usr/app
 
 ENV CHOKIDAR_USEPOLLING=true
 ENV LANG=C.UTF-8
