--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ env:
   AWS_REGION: us-east-1
   ECS_SERVICE: confess-service
   ECS_CLUSTER: confess-cluster
-  ECS_TASK_DEFINITION: confess-front/.aws/task-definition.json
+  ECS_TASK_DEFINITION: .aws/task-definition.json
 
 permissions:
   contents: read
@@ -20,23 +20,14 @@ jobs:
     timeout-minutes: 10
     defaults:
       run:
-        working-directory: confess-front
+        working-directory: ./user/bin/bash
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Debug directory structure
-        run: |
-          echo "Current directory:"
-          pwd
-          echo "Contents of current directory:"
-          ls -la
-          echo "Contents of confess-front directory:"
-          ls -la confess-front
-
       - name: Build an Image and Run Tests
         run: |
-          docker image build --target production -t temp_confess_image_name:latest --build-arg .
+          docker image build --target production -t temp_confess_image_name:latest --build-arg  .
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -88,7 +79,7 @@ jobs:
       - name: Deploy Amazon ECS task definition
         uses: aws-actions/amazon-ecs-deploy-task-definition@v1
         with:
-          task-definition: ${{ steps.render-web-task-def.outputs.task-definition }}
+          task-definition: ${{ steps.render-api-task-def.outputs.task-definition }}
           service: ${{ env.ECS_SERVICE }}
           cluster: ${{ env.ECS_CLUSTER }}
           wait-for-service-stability: true
