--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,14 +20,14 @@ jobs:
     timeout-minutes: 10
     defaults:
       run:
-        working-directory: ./confess-front
+        working-directory: ../confess-front
 
     steps:
       - uses: actions/checkout@v3
 
       - name: Build an Image and Run Tests
         run: |
-          docker image build --target production -t temp_confess_image_name:latest  .
+          docker image build --target production -t temp_confess_image_name:latest  -f .docker/Dockerfile  .
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
