--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,9 @@ jobs:
     name: confess-front Container - Test and Build
     runs-on: ubuntu-20.04
     timeout-minutes: 10
-    defaults:
-      run:
-        working-directory: ../confess-front
+    # defaults:
+    #   run:
+    #     working-directory: ../confess-front
 
     steps:
       - uses: actions/checkout@v3
