--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: Build an Image and Run Tests
         run: |
-          docker buildx build --target production -t temp_***_image_name:latest -f ./docker/Dockerfile .
+docker buildx build --target production -t temp_confess_image_name:latest -f ./docker/Dockerfile .
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
