--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,7 +20,7 @@ jobs:
     timeout-minutes: 10
     defaults:
       run:
-        working-directory: confess-front
+        working-directory: ../confess-front
 
     steps:
       - uses: actions/checkout@v3
