--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,88 +1,28 @@
-name: Deploy Confess CI/CD
+name: Deploy to S3 Buckets
 
 on:
   push:
-    branches: ["main"]
-
-env:
-  AWS_REGION: us-east-1
-  ECS_SERVICE: confess-service
-  ECS_CLUSTER: confess-cluster
-  ECS_TASK_DEFINITION: .aws/task-definition.json
-
-permissions:
-  contents: read
+    branches:
+      - main
 
 jobs:
-  confess-test-build-image:
-    name: confess-front Container - Test and Build
-    runs-on: ubuntu-20.04
-    timeout-minutes: 10
-    defaults:
-      run:
-        working-directory: ../confess-front
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Build an Image and Run Tests
-        run: |
-          docker image build --target production -t temp_confess_image_name:latest confess-front/docker/Dockerfile .
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: Push the image to Amazon ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ secrets.AWS_ECR_WEB_SERVER_REPOSITORY }}
-        run: |
-          docker image tag temp_confess_image_name:latest $ECR_REGISTRY/$ECR_REPOSITORY:latest
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
-
-  deploy:
-    name: Deploy
-    runs-on: ubuntu-20.04
-    needs: [confess-test-build-image]
-
+  build:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@main
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+      - name: Install Dependencies
+        run: npm install
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
+      - name: Build
+        run: npm run build
 
-      - name: Fill in the new image ID in the Amazon ECS task definition for web
-        id: render-web-task-def
-        uses: aws-actions/amazon-ecs-render-task-definition@v1
-        with:
-          task-definition: ${{ env.ECS_TASK_DEFINITION }}
-          container-name: confess-front
-          image: ${{ steps.login-ecr.outputs.registry }}/${{ secrets.AWS_ECR_WEB_SERVER_REPOSITORY }}
-
-      - name: Deploy Amazon ECS task definition
-        uses: aws-actions/amazon-ecs-deploy-task-definition@v1
-        with:
-          task-definition: ${{ steps.render-api-task-def.outputs.task-definition }}
-          service: ${{ env.ECS_SERVICE }}
-          cluster: ${{ env.ECS_CLUSTER }}
-          wait-for-service-stability: true
+      - name: Deploy
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: aws s3 cp --recursive --region ap-northeast-1 build s3://${confess-bucket}
 # Web Container Build/Test
 ## Get Source
 ## Build/Test
