--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: aws s3 cp --recursive --region ap-northeast-1 build s3://${confess-bucket}
+        run: aws s3 cp --recursive --region us-east-1 build s3://${confess-bucket}
 # Web Container Build/Test
 ## Get Source
 ## Build/Test
